--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <div class="auth-logo">💼</div>
                         <h1>CashBook Pro</h1>
                         <p>Multi-Currency Money Changer Management System</p>
-                        <div class="status-badge success">Enhanced MongoDB Simulation Active</div>
+<!--                         <div class="status-badge success">Enhanced MongoDB Simulation Active</div> -->
                     </div>
                     
                     <form id="login-form" class="auth-form">
