--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CashBook Pro - Money Changer Management</title>
+    <title>CashBook Pro</title>
     <link rel="stylesheet" href="style.css"> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
@@ -32,7 +32,7 @@
                     <div class="auth-header">
                         <div class="auth-logo">💼</div>
                         <h1>CashBook Pro</h1>
-                        <p>Multi-Currency Money Changer Management System</p>
+                        <p>CashBook Pro Management System</p>
 <!--                         <div class="status-badge success">Enhanced MongoDB Simulation Active</div> -->
                     </div>
                     
