--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <div class="auth-logo">💼</div>
                         <h1>CashBook Pro</h1>
                         <p>CashBook Pro Management System</p>
+                        <p>By Eng Ahmed abdi asayr</p>
 <!--                         <div class="status-badge success">Enhanced MongoDB Simulation Active</div> -->
                     </div>
                     
